[gd_scene load_steps=4 format=3 uid="uid://bx4se2atxek3l"]

[ext_resource type="Script" uid="uid://b31v7n56vgqta" path="res://source/scenes/menu_screen.gd" id="1_sv2dm"]
[ext_resource type="Texture2D" uid="uid://clutf557twwdw" path="res://assets/textures/texture_bg_brown.png" id="2_ghyoc"]
[ext_resource type="FontFile" uid="uid://bj4wlflwm0lq7" path="res://assets/fonts/SourceHanSansSC-Regular-2.otf" id="3_b4crg"]

[node name="menu_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sv2dm")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(0, 324)
autoscroll = Vector2(0, 24)

[node name="Sprite2D" type="TextureRect" parent="Parallax2D"]
offset_right = 576.0
offset_bottom = 324.0
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("2_ghyoc")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_b4crg")
theme_override_font_sizes/font_size = 35
text = "老李的像素平台冒险"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_new_game" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_b4crg")
text = "新游戏"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_settings" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_b4crg")
disabled = true
text = "设置"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="btn_quit" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_b4crg")
text = "退出"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/MarginContainer/btn_new_game" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MarginContainer2/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MarginContainer3/btn_quit" to="." method="_on_btn_quit_pressed"]
